--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -4,6 +4,9 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "0 6 * * *"  # daily 06:00 UTC
+  push:
+    branches: [ "main" ]
+
 
 permissions:
   contents: write
