--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -30,6 +30,10 @@ jobs:
           if (Test-Path requirements.txt) { python -m pip install -r requirements.txt } else { python -m pip install duckdb pandas pyarrow }
         shell: pwsh
 
+      - name: Force UTF-8 console
+        run: chcp 65001
+        shell: cmd
+
       - name: Run pipeline
         run: |
           python -m src.ingest.load_kaggle_raw
