--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -13,8 +13,7 @@ permissions:
 
 jobs:
   run:
-runs-on: ubuntu-latest
-
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -28,27 +27,25 @@ runs-on: ubuntu-latest
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if (Test-Path requirements.txt) { python -m pip install -r requirements.txt } else { python -m pip install duckdb pandas pyarrow }
-        shell: pwsh
-
-      - name: Force UTF-8 console
-        run: chcp 65001
-        shell: cmd
+          python -m pip install -r requirements.txt
 
       - name: Run pipeline
         run: |
           python -m src.ingest.load_kaggle_raw
           python -m src.transform.build_marts
+          python -m src.transform.build_analytics_marts
           python -m src.validate.run_checks
           python -m src.publish.build_report
-        shell: pwsh
 
       - name: Commit updated report
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add docs/index.html outputs/reports/dq_results.json requirements.txt
-          git diff --staged --quiet; if ($LASTEXITCODE -eq 0) { echo "No changes to commit"; exit 0 }
+          git add docs/index.html outputs/reports/dq_results.json
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+            exit 0
+          fi
           git commit -m "chore: update DQ report"
           git push
-        shell: pwsh
+
